fix broken style after bootstrap update

--- a/accounts_ui.styl
+++ b/accounts_ui.styl
@@ -3,6 +3,10 @@
 	padding: 15px;
 
 #login-dropdown-list
+	#forgot-password-link
+	#signup-link
+		margin-top:10px;
+
 	.btn
 		margin-top: 5px;
 
@@ -23,5 +27,5 @@
 .modal-backdrop
 	opacity: 0.75;
 
-.modal-content 
+.modal-content
 	margin-top: 30%;
